# armsIDS2

./: README.md
navdb/: .gitattributes  .gitignore  .gitlab-ci.yml  ChangeLog.md  Makefile.am  README.md  autoclean.sh  autogen.sh  configure.ac.in  deprecated-command.sh  navdb.bash_completion.bash  navdb.pl  package.conf  run-configure
navdb/conf/: .gitignore  Makefile.am  navdb.conf.example
navdb/contrib/: all_columns.sql  feature_counts.sql
navdb/doc/: links.txt  record_counts_2015_12_01.xlsx
navdb/doc/2018-09-26--curacao-waypoint/: RE Discrepancy in billing with AMBAS.htm
navdb/doc/2018-09-26--curacao-waypoint/RE Discrepancy in billing with AMBAS_files/: filelist.xml
navdb/gitlab-ci-build-scripts/: build.sh  centos6-idsna.repo  centos7-idsna.repo  deploy.sh  install-deps.sh
navdb/lib/Local/: ConfigOptions.pm  Makefile.am  Postgres.pm  Project.pm  ShellQuote.pm  ShortestPath.pm  Utils.pm  Versions.pm
navdb/lib/Local/Cmdline/: Makefile.am  drop.pm  dump.pm  export.pm  import.pm  restore.pm  setup.pm
navdb/patches/ead_1705/: navdb-extra-objects.sql
navdb/patches/ead_1705/2018_05_16-south_sudan_split_firs/: HSSS_PARTS_INSERTION.sql
navdb/patches/ead_1705/2018_09_10-nairobi_fir_sector_b/: airspace_hkna_sector_b.sql
navdb/patches/ead_1705/2018_09_13-misc_auto/: 2018-09-13__14_27_01.747.sql  2018-09-13__14_27_01.747.txt
navdb/patches/ead_1705/2018_10_25-misc_auto/: 2018-10-25 16_35_40.917.sql  2018-10-25 16_35_40.917.txt
navdb/patches/ead_1705/2019-02-05-misc_auto/: 2019-02-05 14_37_07.54.sql  2019-02-05 14_37_07.54.txt
navdb/remote_install_scripts/: bootstrap.sh
navdb/rpm/: build.sh  clean.sh  find_perl_build_req.sh  navdb-data.spec.in  navdb.spec.in
navdb/sql/: Makefile.am  config.sql  create_aero_tables.sql  create_atfm_tables.sql  create_atfm_views.sql  create_common_tables.sql  create_db.sql  create_extensions.sql  create_geometry_functions.sql  create_schemas.sql  create_users.sql  load_aero_tables.sql  update_permissions.sql  wrap_utils.sql
navdb/sql/data/: .gitignore  Makefile.am  compress.sh  download.sh
navdb/t/: 01_cmdline.t  02_shortest_path.t  03_versioncmp.t  10_live_test.t  Makefile.am
(+4233 files in other folders)
